Implement purchase notification usecase
